fix about spacing

--- a/frontend/src/components/about/About.css
+++ b/frontend/src/components/about/About.css
@@ -10,11 +10,21 @@
 
 }
 
+
+.about > div:last-of-type {
+	grid-row:4;
+	grid-column: 1/5;
+	width: 80%;
+	margin-top: 3em;
+	margin-bottom: 3em;
+}
+
 .about > h1 {
 	grid-row: 1;
 	grid-column: 1/5;
 	text-align: center;
 	padding-top: 1em;
+	padding-bottom: 1em;
 	font-size: 50px;
 }
 
@@ -26,7 +36,7 @@
 }
 
 .about > img:last-of-type {
-	grid-row: 4/6;
+	grid-row: 5/7;
 	grid-column: 4;
 	height: 100%;
 	max-width: 100%;
@@ -50,13 +60,13 @@
 
 .about > article:nth-of-type(3) {
 	grid-column: 1/4;
-	grid-row: 4;
+	grid-row: 5;
 	padding-right: 5em;
 }
 
 .about > article:nth-of-type(4) {
 	grid-column: 1/4;
-	grid-row: 5;
+	grid-row: 6;
 	padding-right: 5em;
 }
 
